// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeHistory when rendering when it has history items when an item is currently active renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul>
        <styled.li
          key="config123"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Published August 17, 2018, 2:13 PM EDT
            <styled.div
              theme={
                Object {
                  "colors": Object {
                    "empty": "#FFFFFF",
                    "success": "#AAAAAA",
                  },
                }
              }
            />
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 1.0
          </styled.div>
        </styled.li>
        <styled.li
          key="config456"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 13, 2015, 8:13 AM EDT
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 2.0
          </styled.div>
        </styled.li>
        <styled.li
          key="congig789"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Default Settings
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 0.0
          </styled.div>
        </styled.li>
      </styled.ul>
    </ExpandableMenu>
  </Draggable>
</Fragment>
`;

exports[`ThemeHistory when rendering when it has history items when in prelaunch mode renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul>
        <styled.li
          key="config123"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 17, 2018, 2:13 PM EDT
            <styled.div
              theme={
                Object {
                  "colors": Object {
                    "empty": "#FFFFFF",
                    "success": "#AAAAAA",
                  },
                }
              }
            />
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 1.0
          </styled.div>
        </styled.li>
        <styled.li
          key="config456"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 13, 2015, 8:13 AM EDT
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 2.0
          </styled.div>
        </styled.li>
        <styled.li
          key="congig789"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Default Settings
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 0.0
          </styled.div>
        </styled.li>
      </styled.ul>
    </ExpandableMenu>
  </Draggable>
</Fragment>
`;

exports[`ThemeHistory when rendering when it has history items when no items are currently active renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul>
        <styled.li
          key="config123"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Published August 17, 2018, 2:13 PM EDT
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 1.0
          </styled.div>
        </styled.li>
        <styled.li
          key="config456"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 13, 2015, 8:13 AM EDT
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 2.0
          </styled.div>
        </styled.li>
        <styled.li
          key="congig789"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Default Settings
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 0.0
          </styled.div>
        </styled.li>
      </styled.ul>
    </ExpandableMenu>
  </Draggable>
</Fragment>
`;

exports[`ThemeHistory when rendering when it has history items when the timezoneName is not supported by the browser renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul>
        <styled.li
          key="config123"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Published August 17, 2018, 8:13 PM
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 1.0
          </styled.div>
        </styled.li>
        <styled.li
          key="config456"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 13, 2015, 2:13 PM
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 2.0
          </styled.div>
        </styled.li>
        <styled.li
          key="congig789"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Default Settings
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 0.0
          </styled.div>
        </styled.li>
      </styled.ul>
    </ExpandableMenu>
  </Draggable>
</Fragment>
`;

exports[`ThemeHistory when rendering when it has no history items renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul />
    </ExpandableMenu>
  </Draggable>
</Fragment>
`;

exports[`ThemeHistory when rendering when the modal is open renders correctly 1`] = `
<Fragment>
  <Draggable
    position={
      Object {
        "x": 5,
        "y": 10,
      }
    }
  >
    <ExpandableMenu
      title="History"
    >
      <styled.ul>
        <styled.li
          key="config123"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Published August 17, 2018, 2:13 PM EDT
            <styled.div
              theme={
                Object {
                  "colors": Object {
                    "empty": "#FFFFFF",
                    "success": "#AAAAAA",
                  },
                }
              }
            />
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 1.0
          </styled.div>
        </styled.li>
        <styled.li
          key="config456"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Saved August 13, 2015, 8:13 AM EDT
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 2.0
          </styled.div>
        </styled.li>
        <styled.li
          key="congig789"
          onClick={[Function]}
        >
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "primaryText": "#FFFFFF",
                },
                "typography": Object {
                  "fontWeight": Object {
                    "bold": 600,
                  },
                },
              }
            }
          >
            Default Settings
          </styled.div>
          <styled.div
            theme={
              Object {
                "colors": Object {
                  "secondaryText": "#FFFFFF",
                },
              }
            }
          >
            Version 
            Version 0.0
          </styled.div>
        </styled.li>
      </styled.ul>
    </ExpandableMenu>
  </Draggable>
  <ConfirmModal
    body="This theme has unpublished changes. Do you want to proceed?"
    primaryAction={[Function]}
    secondaryAction={[Function]}
    title="Theme Change Warning"
  />
</Fragment>
`;
